--- a/views/partials/timer.ejs
+++ b/views/partials/timer.ejs
@@ -15,7 +15,7 @@
 </style>
 
 
-<svg id="timer" timeout="10" r="50" width="50" height="50" viewbox="0 0 100 100">
+<svg id="timer" style="display: none" r="50" width="50" height="50" viewbox="0 0 100 100">
 
     <path id="border" transform="translate(50, 50)"/>
     <path id="loader" transform="translate(50, 50) scale(.84)"/>
@@ -23,8 +23,10 @@
 
 <script>
     var timerId = null;
+    var timer = document.getElementById('timer')
 
     function stopTimer() {
+        timer.style.display = "none";
         if(timerId !=null) {
             clearTimeout(timerId);
             timerId = null;
@@ -33,7 +35,8 @@
 
     function startTimer(initTimeout, maxTimeout, initTimeoutFunction, maxTimeoutFunction) {
         var radius = 50;
-        var timer = document.getElementById('timer')
+        timer.style.display = "inline";
+
         var loader = document.getElementById('loader')
         var border = document.getElementById('border')
         var π = Math.PI
