--- a/views/adjustVolume.ejs
+++ b/views/adjustVolume.ejs
@@ -11,6 +11,9 @@
     <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="/jquery/dist/jquery.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/recorderjs/audiodisplay.js"></script>
+    <script src="js/recorderjs/recorder.js"></script>
+    <script src="js/recorderjs/audioMain.js"></script>
 </head>
 <body style="width:50%; height:100%; margin-left: 25%">
     <audio src="/assets/Audio/Items/2000.1.mp3" autoplay loop></audio>
