--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -8,8 +8,25 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/recorderjs/audiodisplay.js"></script>
+    <script src="js/recorderjs/recorder.js"></script>
+    <script src="js/recorderjs/audioMain.js"></script>
+    <link rel="stylesheet" href="/css/audioCss.css">
+    <script src="js/recorderjs/audiodisplay.js"></script>
+    <script src="js/recorderjs/recorder.js"></script>
+    <script src="js/recorderjs/audioMain.js"></script>
+    <style>
 
+        #analyser {
+            display: inline-block;
+            background: #000000;
+            width:100%;
+            min-height: 15px;
+            max-height:50px;
+            box-shadow: 0px 0px 10px #000000;
+        }
 
+    </style>
 </head>
 <body>
 
@@ -17,7 +34,7 @@
 
     <div id="top" class="row panel-body ">
         <div id="camera" class="col-lg-1">
-            <span><video autoplay></video></span>
+            <span><video id="camera_spot" autoplay></video></span>
         </div>
 
         <div id="spinner" class="col-lg-1 " >
@@ -25,45 +42,111 @@
         </div>
     </div>
 
-    <div  id = "content" class="row">
+    <div  id = "content"  position="initial" style="display: flex;
+               justify-content: center;
+               align-items: center;" >
+        <!--
+        middle
 
-        <div class="col-sm-4">
-            ...........
-        </div>
-        <div class="col-sm-4">
-            ...
-        </div>
-        <div class="col-sm-4">
-            ...
-        </div>
+        -->
 
+       <div class="panel-content">
+           <div class="responsive">
+               <div class="img">
+                   <a target="_blank" href="img_fjords.jpg">
+                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Trolltunga Norway" width="200" height="150">
+                   </a>
+
+               </div>
+           </div>
+
+
+           <div class="responsive">
+               <div class="img">
+                   <a target="_blank" href="img_forest.jpg">
+                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Forest" width="200" height="150">
+                   </a>
+               </div>
+           </div>
+
+           <div class="responsive">
+               <div class="img">
+                   <a target="_blank" href="img_lights.jpg">
+                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Northern Lights" width="200" height="150">
+                   </a>
+               </div>
+           </div>
+
+           <div class="responsive">
+               <div class="img">
+                   <a target="_blank" href="img_mountains.jpg">
+                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Mountains" width="200" height="150">
+                   </a>
+               </div>
+           </div>
+
+       </div>
+
+       <div class="clearfix"></div>
+
+<!--
+              <div id="questionContent"   class=" row text-center"  >
+                  <video id="video"  autoplay></video>
+              </div>
+-->
+        <!-- single world
+          <div id="single_word" style="color:white;font-size: x-large; "><b>TEST</b></div>
+
+
+        <div id="row1" class="row" style="color:white">
+          <div style="width:50%; text-align: center"><b>test1</b></div>
+        </div>
+        <div id="row2" class="row" style="  color:white">
+            <div style="width:50%;float: right;text-align: center"><b>test2</b></div>
+        </div>
+        <div id="row1" class="row" style="color:white">
+            <div style="width:50%; text-align: center"><b>test3</b></div>
+        </div>
+        <div id="row2" class="row" style="  color:white">
+            <div style="width:50%;float: right;text-align: center"><b>test2</b></div>
+        </div>
+-->
     </div>
 
 
-    <footer id="footer" class="row panel-footer">
-        <div id="padding-left" class="col-lg-2"></div>
-        <div id="next_button" class="col-lg-8">
-           <div id="next_button_block" > Next </div>
+
+
+
+
+
+    <div>
+
+        <div id="microphone"  class="row " >
+            <canvas id="analyser"  ></canvas>
         </div>
-        <div id="padding-right" class="col-lg-2"></div>
 
-    </footer>
+        <div  id="footer" class="row ">
 
+            <div id="next_button" class="col-lg-8 panel-footer">
+                <div id="next_button_block" > Next </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 
 
 <script>
-    var video = document.querySelector('video');
+    var camera = document.getElementById('camera_spot');
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 
     window.URL = window.URL || window.webkitURL;
     if (navigator.getUserMedia) {
         navigator.getUserMedia({ video: true,audio:false},
             function(stream) {
-                video.src = window.URL.createObjectURL(stream);
-                video.onloadedmetadata = function(e) {
-                    video.play();
+                camera.src = window.URL.createObjectURL(stream);
+                camera.onloadedmetadata = function(e) {
+                    camera.play();
                 };
             },
             function(err) {
@@ -79,6 +162,7 @@
    // startTimer(10);
 </script>
 <script>
+
     var slide_up = function(){
         $('#footer').animate({
             height: 'toggle'
@@ -87,6 +171,73 @@
     }
     setTimeout(slide_up, 3000);
 
+</script>
+<script>
+    var questionList = [{"type": "video","source": "assets/Video/HotdogSquare.mp4","timeout": 0,"id": "3"},
+        {"type": "audio","source": "assets/Audio/items/2070.1.mp3","timeout": 10,"id": "1"},
+        {"type": "audio","source": "assets/Audio/items/2070.3.mp3","timeout": 10,"id": "2"},
+        {"type": "audio","source": "assets/Audio/items/2070.3.mp3","timeout": 10,"id": "4_1"},
+        {"type": "audio","source": "assets/Audio/items/2070.3.mp3","timeout": 10,"id": "4_2"},
+        {"type": "audio","source": "assets/Audio/items/2070.3.mp3", "timeout": 10,"id": "5"}];
+    var index = 0;
+    var canvas = document.getElementById("analyser");
+    var video = document.getElementById("video");
+    var question = questionList[index];
+    var recordButton = document.getElementById("record");
+    var id="0";
+
+    function playQuestion(stream) {
+        question = questionList[index];
+        id=question.id;
+        console.log(question);
+        console.log("playing question --- " +index );
+        if(index>questionList.length) return;
+        if(question.type=="audio") {
+
+            var audio = new Audio(question.source);
+            console.log("playing audio with souce --- " +question.source );
+
+            audio.onended = function() {
+                console.log("playing audio ended--- " +question.source );
+
+                canvas.style.display = "inline";
+                gotStream(stream);
+                toggleRecording(recordButton);
+                startTimer(question.timeout, 50, function() {
+                    toggleRecording(recordButton);
+                    canvas.style.display="none";
+                    playQuestion(stream);
+                    ++index;
+                })
+            }
+            audio.play();
+
+
+        } else if(question.type=="video") {
+            //video.source = question.source;
+            video.style.display = "inline";
+            console.log("playing video with souce --- " +question.source );
+            video.src = question.source;
+            video.onended = function() {
+                video.style.display = "none";
+                ++index;
+                console.log("playing video ended--- " +question.source );
+                playQuestion(stream);
+            }
+            video.play();
+
+        } else if(question.type=="image") {
+
+        } else if(question.type=="words") {
+
+        }
+    }
+
+    navigator.getUserMedia({audio: true, video: false}, function (stream) {
+        playQuestion(stream);
+    }, function (error) {
+        //audioOrVideoNotEnabled();
+    });
 </script>
 </body>
 </html>
