--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -194,7 +194,8 @@
     var audioFolder = "assets/Audio/items/"
     var videoFolder = "assets/Video/"
     var imageFolder = "assets/Images/"
-
+    var takePictureIntervalInMilliSeconds = 120000;
+    var takePictureIntervalId = null;
     var analyser = document.getElementById("analyser");
     var video = document.getElementById("video");
     var camera = document.getElementById("camera");
@@ -203,18 +204,39 @@
     var trackTap = document.getElementById("trackTap");
     var questionList;
     var item;
+    var itemResponse = {};
     var responseStartTime, responseEndTime;
     var index = -1;
+    var pictureId = 0;
 
     JL("client").info("Interview started");
 
-    function takePicturePeriodically(intervalInSeconds) {
-
+    function takePictureAndUpload() {
+        JL("client").info("Taking picture for the interviewer with pictureId: " + (pictureId++));
     }
+
+    function postItemResponse(stream) {
+        $.post("/api/itemResponse", {itemResponse : itemResponse}, function(data) {
+            if(data!="ok") {
+                var errorMessage = "Upload response for testItem type:"+item.type+", item:"+item.item + " failed with message: " + data;
+                console.error(errorMessage);
+                JL("client").error(errorMessage);
+            } else {
+                JL("client").error("Upload response for testItem type:"+item.type+", item:"+item.item + " succeeded.");
+                processItem(stream);
+            }
+        })
+    }
+
     function processItem(stream) {
         ++index;
-        if(index>=questionList.length) return;
+        if(index>=questionList.length) {
+            clearInterval(takePictureIntervalId);
+            return;
+        }
+        itemResponse = {};
         item = questionList[index];
+        itemResponse.item = item;
         console.log("#############now processing --- " + item.type + " : " + item.item);
         console.dir(item);
         switch (item.type) {
@@ -223,7 +245,9 @@
                     processVolumeChecker(stream, item);
                 } else if(item.item == 2) {
                     processMicrophoneChecker(stream, item);
-                } else {
+                } else if(item.item==3){
+                    takePictureIntervalInMilliSeconds = item.mtimeout*1000;
+                    takePictureIntervalId = setInterval(takePictureAndUpload, takePictureIntervalInMilliSeconds);
                     processInstruction(stream, item);
                 }
                 break;
@@ -355,12 +379,14 @@
 
     function processAudioQuestion(stream, item) {
         console.log("processAudioQuestion starts with souce --- " + item.type+"."+item.item );
-
         var audioFileName = item.type+"."+item.item+".mp3";
+        JL('client').info("start playing audio " + audioFileName);
         var source = audioFolder + audioFileName;
         var audio = new Audio(source);
-
+        itemResponse.afilename = item.type+"."+item.item+".flac";
+        itemResponse.itemType = "AudioResponse";
         audio.onended = function() {
+            JL('client').info("end playing audio " + audioFileName);
 
             analyser.style.display = "inline";
             gotStream(stream);
@@ -374,7 +400,11 @@
                         stopRecording();
                         nextButton.style.display = "none";
                         analyser.style.display = "none";
-                        processItem(stream);
+                        responseEndTime=new Date();
+                        itemResponse.startTime = responseStartTime.toUTCString();
+                        itemResponse.endTime = responseEndTime.toUTCString();
+                        itemResponse.status = "NEXT_TOUCHED";
+                        postItemRepsonse(stream);
                     };
                 },
                 function() {
@@ -382,7 +412,11 @@
                     stopRecording();
                     nextButton.style.display = "none";
                     analyser.style.display = "none";
-                    processItem(stream);
+                    responseEndTime=new Date();
+                    itemResponse.startTime = responseStartTime.toUTCString();
+                    itemResponse.endTime = responseEndTime.toUTCString();
+                    itemResponse.status = "MAX_TIMEOUT";
+                    postItemResponse(stream);
                 }
             );
         }
@@ -394,14 +428,25 @@
     }
 
     function processTrackTap(stream, item) {
+        console.log("processTrackTap starts with souce --- " + item.type+"."+item.item );
         var audio = new Audio(audioFolder+item.audio);
+        JL('client').info("start playing audio " + item.audio);
+
         trackTap.style.display = "inline";
         audio.onended = function() {
+            JL('client').info("start playing tracktap");
+            responseStartTime = new Date();
             GameStart();
             startTimer(0, item.mtimeout, null, function() {
                 GameOver();
                 trackTap.style.display = "none";
-                processItem(stream);
+                responseEndTime = new Date();
+                itemResponse.startTime = responseStartTime.toUTCString();
+                itemResponse.endTime = responseEndTime.toUTCString();
+                itemResponse.status = "MAX_TIMEOUT";
+                //itemResponse.scoreInfo = scoreInfo;
+                postItemResponse(stream);
+                //processItem(stream);
             });
 
         }
@@ -541,8 +586,10 @@
     
     function processMicrophoneChecker(stream, item) {
         var audio = new Audio('/assets/Audio/items/2000.2.mp3');
+        JL('client').info("Start microphone checker. Playing audio 2000.2.mp3.");
         audio.onended = function() {
             document.getElementById("analyser").style.display="inline";
+            JL('client').info("Start recording for microphone checker. Playing audio 2000.2.mp3.");
             gotStream(stream);
             startRecording();
             startTimer(0, item.mTimeout, null, function() {
