--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="ami_pacer">
 <head>
     <title>Bootstrap Example</title>
     <meta charset="utf-8">
@@ -15,6 +15,8 @@
     <script src="js/recorderjs/audiodisplay.js"></script>
     <script src="js/recorderjs/recorder.js"></script>
     <script src="js/recorderjs/audioMain.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="js/app.js"></script>
     <style>
 
         #analyser {
@@ -42,53 +44,53 @@
         </div>
     </div>
 
-    <div  id = "content"  position="initial" style="display: flex;
-               justify-content: center;
-               align-items: center;" >
+    <div  id = "content"  ng-controller="testCtrl">
+
+        <div style="color:white">{{current.seq}}</div>
         <!--
-        middle
+            middle
+            position="initial" style="display: flex;
+                                      justify-content: center;
+                                      align-items: center;"
+           <div class="panel-content">
+               <div class="responsive">
+                   <div class="img">
+                       <a target="_blank" href="img_fjords.jpg">
+                           <img src="\assets\Images\2062\FE2_C.jpg" alt="Trolltunga Norway" width="200" height="150">
+                       </a>
 
+                   </div>
+               </div>
+
+
+               <div class="responsive">
+                   <div class="img">
+                       <a target="_blank" href="img_forest.jpg">
+                           <img src="\assets\Images\2062\FE2_C.jpg" alt="Forest" width="200" height="150">
+                       </a>
+                   </div>
+               </div>
+
+               <div class="responsive">
+                   <div class="img">
+                       <a target="_blank" href="img_lights.jpg">
+                           <img src="\assets\Images\2062\FE2_C.jpg" alt="Northern Lights" width="200" height="150">
+                       </a>
+                   </div>
+               </div>
+
+               <div class="responsive">
+                   <div class="img">
+                       <a target="_blank" href="img_mountains.jpg">
+                           <img src="\assets\Images\2062\FE2_C.jpg" alt="Mountains" width="200" height="150">
+                       </a>
+                   </div>
+               </div>
+
+           </div>
+
+           <div class="clearfix"></div>
         -->
-
-       <div class="panel-content">
-           <div class="responsive">
-               <div class="img">
-                   <a target="_blank" href="img_fjords.jpg">
-                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Trolltunga Norway" width="200" height="150">
-                   </a>
-
-               </div>
-           </div>
-
-
-           <div class="responsive">
-               <div class="img">
-                   <a target="_blank" href="img_forest.jpg">
-                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Forest" width="200" height="150">
-                   </a>
-               </div>
-           </div>
-
-           <div class="responsive">
-               <div class="img">
-                   <a target="_blank" href="img_lights.jpg">
-                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Northern Lights" width="200" height="150">
-                   </a>
-               </div>
-           </div>
-
-           <div class="responsive">
-               <div class="img">
-                   <a target="_blank" href="img_mountains.jpg">
-                       <img src="\assets\Images\2062\FE2_C.jpg" alt="Mountains" width="200" height="150">
-                   </a>
-               </div>
-           </div>
-
-       </div>
-
-       <div class="clearfix"></div>
-
 <!--
               <div id="questionContent"   class=" row text-center"  >
                   <video id="video"  autoplay></video>
@@ -125,10 +127,10 @@
             <canvas id="analyser"  ></canvas>
         </div>
 
-        <div  id="footer" class="row ">
+        <div  id="footer" class="row " ng-controller="testCtrl">
 
             <div id="next_button" class="col-lg-8 panel-footer">
-                <div id="next_button_block" > Next </div>
+                <div id="next_button_block" ><button ng-click="next()">next</button></div>
             </div>
         </div>
     </div>
